--- a/install.txt
+++ b/install.txt
@@ -1,9 +1,4 @@
-1. sudo apt install gitsome
-2. sudo apt install git
-3. git clone https://github.com/TwoWolfs-WSB/convert_to_Morse
-4. sudo apt-get update 
-5. sudo apt-get install python3
-6. sudo apt-get update
-7. sudo apt-get upgrade
-8. sudo apt install python3-pip
-9. sudo apt install sox
+1. git clone https://github.com/TwoWolfs-WSB/convert_to_Morse
+2. sudo apt-get update
+3. sudo apt-get install -y python-tk
+4. sudo apt install sox
